objects/CN_Schedule_Line__c.object
<CustomObject>
    <fields>
        <fullName>CN_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Order_Item_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Item</label>
        <referenceTo>CN_Sales_Order_Item__c</referenceTo>
        <relationshipLabel>Schedule Line</relationshipLabel>
        <relationshipName>Schedule_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_SAP_Schedule_Line_Number__c</fullName>
        <externalId>true</externalId>
        <label>SAP Schedule Line Number</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Schedule Line</label>
    <nameField>
        <label>Schedule Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Line</pluralLabel>
    <recordTypes>
        <fullName>CN_Schedule_Line</fullName>
        <active>true</active>
        <label>CN Schedule Line</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>